# pcl-ros

./: package.xml
data/: LCAS_vsevolod.pcd
launch/: filter_downsample.launch  partitioning.launch  read_rviz.launch  read_vis.launch  registration_matching.launch  rviz_matching.launch  segmentation.launch
rviz/: intensity.rviz  matching.rviz  read.rviz  segmentation.rviz
src/: pcl_create.cpp  pcl_downsampling.cpp  pcl_matching.cpp  pcl_planar_segmentation.cpp  pcl_read.cpp
